# ai-hedge-fund

./: .dockerignore  .env.example  .gitignore  pyproject.toml
app/: run.sh
src/: backtester.py
src/agents/: aswath_damodaran.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  fundamentals.py  growth_agent.py  michael_burry.py  mohnish_pabrai.py  news_sentiment.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  rakesh_jhunjhunwala.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/cli/: input.py
src/llm/: api_models.json
src/tools/: akshare_api.py  api.py  tushare_api.py
src/utils/: display.py
