[project]
name = "ai-hedge-fund"
version = "1.0.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.7",
    "langchain-anthropic==0.3.5",
    "langchain-groq==0.2.3",
    "langchain-openai>=0.3.5",
    "langchain-deepseek>=0.1.2",
    "langchain-ollama==0.3.6",
    "langgraph==0.2.56",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.31",
    "akshare>=1.12.0",
    "tushare>=1.4.0",
    "python-dotenv==1.0.0",
    "matplotlib>=3.9.2",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "langchain-google-genai>=2.0.11",
    "fastapi[standard]>=0.104.0",
    "fastapi-cli>=0.0.7",
    "pydantic>=2.4.2",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.22",
    "alembic>=1.12.0",
    "langchain-gigachat>=0.3.12",
    "langchain-xai>=0.2.5",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.scripts]
backtester = "src.backtesting.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[tool.black]
line-length = 420
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
